--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>ctlam</title>
+  <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
