--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
             </p>
             <p>
               Apart from working in Hong Kong, I am also open to opportunities from overseas, especially Japan, Canada
-              and
-              CA, US.
+              and US.
             </p>
           </div>
         </div>
