cases issue solve

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
           <div class="col-lg-4">
             <div class="card">
-              <img src="assets/img/mind_drive.jpg" class="card-img-top" style="max-height: 500px;" />
+              <img src="assets/img/mind-drive.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">Mind Drive Champion 2014</h5>
                 <p class="card-text">
@@ -347,7 +347,7 @@
 
           <div class="col-lg-4">
             <div class="card">
-              <img src="assets/img/RIDIY.jpg" class="card-img-top" style="max-height: 500px;" />
+              <img src="assets/img/ridiy_img.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">RIDIY Champion 2014</h5>
                 <p class="card-text">
