--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
               <h5>Dec 2015 - May 2017</h5>
               <p><em><a href="http://roctec.com.hk/" target="_blank">Roctec Technology Limited</a>, Hong Kong</em></p>
               <ul>
-                <li>Constructed a web-base database for the department staff record different data.</li>
-                <li>Designed an online user-interface which convenience the process in data input and secure the data
-                  retrieval.</li>
+                <li>Implemented the testing of a developed multi-media software to ensure there is no error.</li>
+                <li>Investigated the usage of a new developed machine, and compared with old method so as to figure out which
+                  performance and reliability is better.</li>
               </ul>
             </div>
           </div>
