img display improve

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6" data-aos="fade-right">
-              <img class="" src="assets/img/Robocon2020.jpg" style="max-width: 100%; max-height: 100%; height: 350px;">
+              <img class="" src="assets/img/Robocon2020.jpg" style="max-height: 350px;">
             </div>
             <div class="col-md-6 content" data-aos="fade-left">
               <h3>ABU Asia-Pacific Robot Contest 2020</h3>
@@ -292,7 +292,7 @@
               </p>
             </div>
             <div class="col-md-6 " data-aos="fade-left">
-              <img class="" src="assets/img/Robocon2019.jpg" style="max-width: 100%; max-height: 100%; height: 350px;">
+              <img class="" src="assets/img/Robocon2019.jpg" style="max-height: 350px;">
             </div>
           </div>
         </div>
@@ -300,7 +300,7 @@
           <div class="row">
             <div class="col-md-6" data-aos="fade-right">
               <img class="" src="assets/img/outstanding_students_CUHK.jpg"
-                style="max-width: 100%; max-height: 100%; height: 350px;">
+                style="max-height: 350px;">
             </div>
             <div class="col-md-6 content" data-aos="fade-left">
               <h3>CUHK Outstanding Students Awards 2019</h3>
