--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <p><em>The Chinese University of Hong Kong (CUHK)</em></p>
               <ul>
                 <li>Minor in information Engineering</li>
-                <li>second-upper honor graduation</li>
+                <li>Second-upper honor graduation</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -194,6 +194,18 @@
                 <li>Designed the software system for controlling robot for both front-end and back-end.</li>
                 <li>Developed an mobile application using Flutter for displaying robot location on map.</li>
                 <li>Developed cloud service for communicating between mobile application and robot</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Research Assistant</h4>
+              <h5>Jun 2018 - Aug 2018</h5>
+              <p><em>The Chinese University of Hong Kong, Hong
+                  Kong</em></p>
+              <ul>
+                <li>Outlined the software design of a surveillance system for a production line in a factory.</li>
+                <li>Designed the machinery communication protocol for efficient controlling.</li>
+                <li>Prepared the documents of HKSTP start-up company and the technical documentation of a automated production
+                  line.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -554,7 +566,7 @@
                 Machine Learning (Pytorch, TensorFlow)<br>
                 Parallel Computing (CUDA, SIMD)<br>
                 Application (Electron)<br>
-                And git for any kinds of software development!</td>
+                Others (Git, Docker)</td>
 
             </tr>
           </tbody>
