Update in courses study

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Background</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Background</span></a>
+          </li>
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
           </li>
@@ -159,7 +160,92 @@
                 <h4>Master of Science in Big Data Technology</h4>
               </a>
               <h5>2021 - 2022 (Present)</h5>
-              <p><em>The Hong Kong University of Science and Technology (HKUST)</em></p>
+              <p><em>The Hong Kong University of Science and Technology (HKUST)</em>
+              </p>
+              <p><a data-bs-toggle="collapse" href="#collapseUSTCourse" role="button" aria-expanded="false"
+                  aria-controls="collapseUSTCourse">
+                  SW Relate Courses Studied
+                </a>
+              </p>
+
+              <div class="collapse" id="collapseUSTCourse">
+                <div class="card card-body">
+                  <table class="table">
+                    <tr>
+                      <td>
+                        MSBD5001
+                      </td>
+                      <td>
+                        Foundation of Data Analytics
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5002
+                      </td>
+                      <td>
+                        Data Mining and Knowledge Discovery
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5003
+                      </td>
+                      <td>
+                        Big Data Computing
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5004
+                      </td>
+                      <td>
+                        Mathematical Methods for Data Analysis
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5012
+                      </td>
+                      <td>
+                        Machine Learning
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5015
+                      </td>
+                      <td>
+                        Artificial Intelligence
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5016
+                      </td>
+                      <td>
+                        Deep Learning Meets Computer Vision: Practice and Applications
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5017
+                      </td>
+                      <td>
+                        Introduction to Blockchain Technology
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        MSBD5018
+                      </td>
+                      <td>
+                        Natural Language Processing
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
             </div>
             <div class="resume-item">
               <a href="https://www.cse.cuhk.edu.hk/">
@@ -171,6 +257,184 @@
                 <li>Minor in information Engineering</li>
                 <li>Second-upper honor graduation</li>
               </ul>
+              <p><a data-bs-toggle="collapse" href="#collapseCUHKCourse" role="button" aria-expanded="false"
+                  aria-controls="collapseCUHKCourse">
+                  SW Relate Courses Studied
+                </a>
+              </p>
+
+              <div class="collapse" id="collapseCUHKCourse">
+                <div class="card card-body">
+                  <u>Basic</u>
+                  <table class="table">
+                    <tr>
+                      <td>
+                        ENGG1110
+                      </td>
+                      <td>
+                        Problem Solving By Programming
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI2100
+                      </td>
+                      <td>
+                        Data Structures
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3100
+                      </td>
+                      <td>
+                        Software Engineering
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3130
+                      </td>
+                      <td>
+                        Formal Languages and Automata Theory
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3160
+                      </td>
+                      <td>
+                        Design and Analysis of Algorithms
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3180
+                      </td>
+                      <td>
+                        Principles of Programming Languages
+                      </td>
+                    </tr>
+                  </table>
+                  <u>Embedded System</u>
+                  <table class="table">
+                    <tr>
+                      <td>
+                        CSCI3150
+                      </td>
+                      <td>
+                        Introduction to Operating Systems
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CENG3420
+                      </td>
+                      <td>
+                        Computer Organization and Design
+                      </td>
+                    </tr>
+                  </table>
+                  <u>Multimedia Related</u>
+                  <table class="table">
+                    <tr>
+                      <td>
+                        CSCI3260
+                      </td>
+                      <td>
+                        Principles of Computer Graphics
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3280
+                      </td>
+                      <td>
+                        Introduction to Multimedia Systems
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI4120
+                      </td>
+                      <td>
+                        Principles of Computer Game Software
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        AIST2010
+                      </td>
+                      <td>
+                        Introduction to Computer Music: From Analysis to Algorithmic
+                        Music
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI3290
+                      </td>
+                      <td>
+                        Computational Imaging and Vision
+                      </td>
+                    </tr>
+                  </table>
+                  <u>Network And System</u>
+                  <table class="table">
+                    <tr>
+                      <td>
+                        CSCI4430
+                      </td>
+                      <td>
+                        Data Communication and Computer Networks
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI4160
+                      </td>
+                      <td>
+                        Distributed and Parallel Computing
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        CSCI4180
+                      </td>
+                      <td>
+                        Introduction to Cloud Computing and Storage
+                      </td>
+                    </tr>
+                  </table>
+                  <u>Minor Courses</u>
+                  <table class="table">
+                    <tr>
+                      <td>
+                        IERG4230
+                      </td>
+                      <td>
+                        Introduction to Internet of Things
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        IERG4130
+                      </td>
+                      <td>
+                        Introduction to Cyber Security
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        IERG4190
+                      </td>
+                      <td>
+                        Multimedia Coding and Processing
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
             </div>
             <div class="resume-item">
               <h4>Associate of Science in Information System Development </h4>
@@ -181,6 +445,58 @@
                 <li>GPA 3.92/4.3 in fall semeste</li>
                 <li>GPA 3.8/4.3 in spring semester</li>
               </ul>
+              <p><a data-bs-toggle="collapse" href="#collapseCCCUCourse" role="button" aria-expanded="false"
+                  aria-controls="collapseCCCUCourse">
+                  SW Relate Courses Studied
+                </a>
+              </p>
+
+              <div class="collapse" id="collapseCCCUCourse">
+                <div class="card card-body">
+                  <table class="table">
+                    <tr>
+                      <td>
+                        AST10106
+                      </td>
+                      <td>
+                        Introduction to Programming
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        AST10201
+                      </td>
+                      <td>
+                        Computer Organization
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        AST10303
+                      </td>
+                      <td>
+                        Understanding the Network-Centric World
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        AST11110
+                      </td>
+                      <td>
+                        Introduction to Web Development
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        AST21105
+                      </td>
+                      <td>
+                        Object Oriented Programming
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
@@ -194,18 +510,6 @@
                 <li>Designed the software system for controlling robot for both front-end and back-end.</li>
                 <li>Developed an mobile application using Flutter for displaying robot location on map.</li>
                 <li>Developed cloud service for communicating between mobile application and robot</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Research Assistant</h4>
-              <h5>Jun 2018 - Aug 2018</h5>
-              <p><em>The Chinese University of Hong Kong, Hong
-                  Kong</em></p>
-              <ul>
-                <li>Outlined the software design of a surveillance system for a production line in a factory.</li>
-                <li>Designed the machinery communication protocol for efficient controlling.</li>
-                <li>Prepared the documents of HKSTP start-up company and the technical documentation of a automated production
-                  line.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -226,7 +530,8 @@
               <p><em><a href="http://roctec.com.hk/" target="_blank">Roctec Technology Limited</a>, Hong Kong</em></p>
               <ul>
                 <li>Implemented the testing of a developed multi-media software to ensure there is no error.</li>
-                <li>Investigated the usage of a new developed machine, and compared with old method so as to figure out which
+                <li>Investigated the usage of a new developed machine, and compared with old method so as to figure out
+                  which
                   performance and reliability is better.</li>
               </ul>
             </div>
@@ -311,8 +616,7 @@
         <div class="container mt-5">
           <div class="row">
             <div class="col-md-6" data-aos="fade-right">
-              <img class="" src="assets/img/outstanding_students_CUHK.jpg"
-                style="max-height: 350px;">
+              <img class="" src="assets/img/outstanding_students_CUHK.jpg" style="max-height: 350px;">
             </div>
             <div class="col-md-6 content" data-aos="fade-left">
               <h3>CUHK Outstanding Students Awards 2019</h3>
@@ -378,7 +682,8 @@
           <h2>Activities</h2>
         </div>
         <p>
-          In this section, I will show the activities that I participated related to technology. The event shown in award section will not be
+          In this section, I will show the activities that I participated related to technology. The event shown in
+          award section will not be
           listed. If any of the news sharing is inappropriate,
           please drop me an email and contact me ASAP.
         <ul>
@@ -480,6 +785,7 @@
             <ul>
               <li>Designed a first person 3D finding object game using Unity3D with kinect sensor control.</li>
               <li>Organized a game booth for visitors to enjoy the game during open day.</li>
+              <li>Related report can be found <a href="assets/file/game_report.pdf" target="_blank">here</a></li>
             </ul>
           </li>
           <li>
@@ -555,8 +861,8 @@
             </tr>
             <tr>
               <th scope="row">Tools</th>
-              <td> Robotic and Embedded System (Arduino, Linux, Jetson Nano, ROS)<br> 
-                Computer Vision (OpenCV)<br> 
+              <td> Robotic and Embedded System (Arduino, Linux, Jetson Nano, ROS)<br>
+                Computer Vision (OpenCV)<br>
                 API (gRPC, RESTFUL)<br>
                 Backend (Flask, Express, SQL, MongoDB)<br>
                 Mobile App Development (Flutter)<br>
@@ -610,7 +916,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-
+    <script src="assets/vendor/jquery/jquery-3.0.0.min.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
 
