Index dream place update

--- a/index.html
+++ b/index.html
@@ -794,7 +794,8 @@
                 </li>
 
                 <li>
-                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b class="float-end"> 2021
+                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b class="float-end">
+                    2021
                   </b>
                   <br>
                   <em>Related news</em>
@@ -854,7 +855,8 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b class="float-end"> 2014
+                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b class="float-end">
+                    2014
                   </b>
                   <ul>
                     <li>Designed a first person 3D finding object game using Unity3D with kinect sensor control.</li>
@@ -921,7 +923,65 @@
 
       </div>
     </section>
+    <section id="dream" class="dream">
+      <div class="container">
+        <div class="section-title">
+          <h2>Dream Workplace</h2>
+        </div>
+        <p>
+          In this section, I will list my top 3 company that I would like to work in. The dream to be an influential programmer as mentioned in about section is to contribute to great company and postively affect the world is always my goal of my whole life.
+        </p>
+        <!-- Inner -->
+        <div class="carousel-inner py-4">
+          <!-- Single item -->
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-4">
+                  <div class="card">
+                    <img
+                      src="https://thumbs.dreamstime.com/b/google-headquarters-buildings-logo-mountain-vew-california-usa-aug-multinational-corporation-specializing-internet-183056909.jpg"
+                      class="card-img-top" alt="Waterfall" />
+                    <div class="card-body">
+                      <h5 class="card-title">Google</h5>
+                      <p align="justify" class="card-text">
+                        My life cannot live without Google, and Google products are great, such as gmail, google meet, and even the camera of pixel.  I hope I can work in Google, especially in the office that located in CA, US headquarter.
+                      </p>
+                    </div>
+                  </div>
+                </div>
 
+                <div class="col-lg-4 d-none d-lg-block">
+                  <div class="card">
+                    <img src="https://i.ytimg.com/vi/FzcfZyEhOoI/maxresdefault.jpg" class="card-img-top"
+                      alt="Sunset Over the Sea" />
+                    <div class="card-body">
+                      <h5 class="card-title">Apple</h5>
+                      <p align="justify" class="card-text">
+                        Apple has changed the world of mobile device, which is a match with my dream.  Apple products always well engineered, and the values that apple holds is also my values.  I hope I can work in Apple, especially in the office that located in CA, US headquarter.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 d-none d-lg-block">
+                  <div class="card">
+                    <img src="https://iv1.lisimg.com/image/11489391/640full.jpg" class="card-img-top"
+                      alt="Sunset over the Sea" />
+                    <div class="card-body">
+                      <h5 class="card-title">Robotics Company in Japan</h5>
+                      <p align="justify" class="card-text">
+                        Inspired by Gundam, the engineering in train system, and the exchange in ABU Robocon 2019, I appreciate how Japan treat robotics and engineering.  Their attitude, their approach are excellent.  I hope I can make robotics into trend, and more daily related with their spirit and values.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
