date style update

--- a/index.html
+++ b/index.html
@@ -746,11 +746,11 @@
               <ul class="timeline">
                 <li>
                   <b>VEX IQ held by CUHK - Judge</b>
-                  <b class="float-end"> 2022
+                  <b class="float-end date"> 2022
                   </b>
                 </li>
                 <li>
-                  <b> WAIC HKSTP Sharing</b> <b class="float-end"> 2021
+                  <b> WAIC HKSTP Sharing</b> <b class="float-end date"> 2021
                   </b><br>
                   <em>Related news</em>
                   <ul>
@@ -767,7 +767,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>City I&T Grand Challenge</b> <b class="float-end"> 2021
+                  <b>City I&T Grand Challenge</b> <b class="float-end date"> 2021
                   </b>
                   <br>
                   <em>Related news and events</em>
@@ -794,7 +794,7 @@
                 </li>
 
                 <li>
-                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b class="float-end">
+                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b class="float-end date">
                     2021
                   </b>
                   <br>
@@ -818,18 +818,18 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Innovation and Technology Student Club (ITSC) AI STEM Workshop Tutor</b> <b class="float-end"> 2020
+                  <b>Innovation and Technology Student Club (ITSC) AI STEM Workshop Tutor</b> <b class="float-end date"> 2020
                   </b>
                 </li>
                 <li>
-                  <b>Google hash code competition</b> <b class="float-end"> 2020
+                  <b>Google hash code competition</b> <b class="float-end date"> 2020
                   </b>
                   <ul>
                     <li>A team of 4 people coding competition solving a question within 4 hours.</li>
                   </ul>
                 </li>
                 <li>
-                  <b>CUHK Robotics Software Team Manager</b> <b class="float-end"> 2018-2020
+                  <b>CUHK Robotics Software Team Manager</b> <b class="float-end date"> 2018-2020
                   </b>
                   <ul>
                     <li>Developed and Tested automatic robot control software.</li>
@@ -837,7 +837,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Remotely Operated Underwater Vehicle Competition (ROV)</b> <b class="float-end"> 2019
+                  <b>Remotely Operated Underwater Vehicle Competition (ROV)</b> <b class="float-end date"> 2019
                   </b> <br>
                   <em>Electric team manager</em>
                   <ul>
@@ -847,7 +847,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Innocarnival developer</b> <b class="float-end"> 2018
+                  <b>Innocarnival developer</b> <b class="float-end date"> 2018
                   </b>
                   <ul>
                     <li>Designed a bucket catching game and multiple choice software.</li>
@@ -855,7 +855,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b class="float-end">
+                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b class="float-end date">
                     2014
                   </b>
                   <ul>
@@ -865,11 +865,11 @@
                   </ul>
                 </li>
                 <li>
-                  <b>WoFoo Millennium Entrepreneurship Program - Turning 5R into Business</b> <b class="float-end"> 2014
+                  <b>WoFoo Millennium Entrepreneurship Program - Turning 5R into Business</b> <b class="float-end date"> 2014
                   </b>
                 </li>
                 <li>
-                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant</b> <b class="float-end"> 2013
+                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant</b> <b class="float-end date"> 2013
                   </b>
                   <ul>
                     <li>
@@ -878,11 +878,11 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Citi Youth Investment Education Program</b> <b class="float-end"> 2013
+                  <b>Citi Youth Investment Education Program</b> <b class="float-end date"> 2013
                   </b>
                 </li>
                 <li>
-                  <b>Creative Technology Education Association</b> <b class="float-end"> 2012
+                  <b>Creative Technology Education Association</b> <b class="float-end date"> 2012
                   </b>
                   <ul>
                     <li>
@@ -891,7 +891,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Robocup Juior Hong Kong VTC 30 Anniversary</b> <b class="float-end"> 2012
+                  <b>Robocup Juior Hong Kong VTC 30 Anniversary</b> <b class="float-end date"> 2012
                   </b>
                   <ul>
                     <li>
@@ -900,11 +900,11 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Robocup Juior Hong Kong Macau Participant</b> <b class="float-end"> 2012
+                  <b>Robocup Juior Hong Kong Macau Participant</b> <b class="float-end date"> 2012
                   </b>
                 </li>
                 <li>
-                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant </b><b class="float-end"> 2012
+                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant </b><b class="float-end date"> 2012
                   </b>
                   <ul>
                     <li>
@@ -913,7 +913,7 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Robocup Juior Hong Kong Participant</b> <b class="float-end"> 2011
+                  <b>Robocup Juior Hong Kong Participant</b> <b class="float-end date"> 2011
                   </b>
                 </li>
               </ul>
