Minor name fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Background</span></a>
           </li>
-          <li><a href="#skill" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Skill</span></a>
+          <li><a href="#skill" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Skills</span></a>
           </li>
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
