added with animation

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
           please drop me an email and contact me ASAP.
         </p>
         <div class="container mt-5 mb-5">
-          <div class="row">
+          <div class="row" data-aos="fade-up">
             <div>
               <ul class="timeline">
                 <li>
@@ -937,7 +937,7 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4" data-aos="zoom-out-up">
                   <div class="card">
                     <img
                       src="https://thumbs.dreamstime.com/b/google-headquarters-buildings-logo-mountain-vew-california-usa-aug-multinational-corporation-specializing-internet-183056909.jpg"
@@ -951,7 +951,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-4 d-none d-lg-block">
+                <div class="col-lg-4 d-none d-lg-block" data-aos="zoom-in-up">
                   <div class="card">
                     <img src="https://i.ytimg.com/vi/FzcfZyEhOoI/maxresdefault.jpg" class="card-img-top"
                       alt="Sunset Over the Sea" />
@@ -964,7 +964,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-4 d-none d-lg-block">
+                <div class="col-lg-4 d-none d-lg-block" data-aos="zoom-out-up">
                   <div class="card">
                     <img src="https://iv1.lisimg.com/image/11489391/640full.jpg" class="card-img-top"
                       alt="Sunset over the Sea" />
