--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-up">
               <img src="assets/img/talent_scholarship.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">Talent Scholarship by HKSAR 2019 & 2020</h5>
@@ -701,7 +701,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="card">
+            <div class="card" data-aos="zoom-in-up">
               <img src="assets/img/mind-drive.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">Mind Drive Champion 2014</h5>
@@ -714,7 +714,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="card">
+            <div class="card" data-aos="zoom-out-up">
               <img src="assets/img/ridiy_img.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">RIDIY Champion 2014</h5>
