dream workplace hide

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 
       </div>
     </section>
-    <section id="dream" class="dream">
+    <!-- <section id="dream" class="dream">
       <div class="container">
         <div class="section-title">
           <h2>Dream Workplace</h2>
@@ -931,9 +931,9 @@
         <p>
           In this section, I will list my top 3 company that I would like to work in. The dream to be an influential programmer as mentioned in about section is to contribute to great company and postively affect the world is always my goal of my whole life.
         </p>
-        <!-- Inner -->
+
         <div class="carousel-inner py-4">
-          <!-- Single item -->
+
           <div class="carousel-item active">
             <div class="container">
               <div class="row">
@@ -981,7 +981,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
